# rust-simple-fast

./: .gitignore
liquids-glass/: Cargo.toml  liquids-glass.md
liquids-glass/benches/: separate_liquids_bench.rs
liquids-glass/py/: main.py  test_separate_liquids.py
liquids-glass/src/: main.rs
liquids-separation/: Cargo.toml  liquids-separation.md
liquids-separation/benches/: separate_liquids_bench.rs
liquids-separation/py/: main.py  pyproject.toml  test_separate_liquids.py
liquids-separation/separation-py/: main.py  pyproject.toml
liquids-separation/separation-py/separation/: liquids_separation.py
liquids-separation/separation-py/tests/: test_separate_liquids.py
liquids-separation/src/: lib.rs  main.rs
parsing-xlsx/: README.md  excel-parser-rs  log-go.txt  log.txt  out-rs.json  parsing_fast_openpyxl.py  parsing_slow_pd.py  pyproject.toml  result-go.json  result.md  supplier.xlsx
parsing-xlsx/exel-parser/: Cargo.toml
parsing-xlsx/exel-parser/src/: main.rs
parsing-xlsx/go-excel-parser/: go.mod  main.go
reverse-words/: Cargo.toml  README.md
reverse-words/benches/: reverse_words_bench.rs
reverse-words/src/: lib.rs  main.rs
unique-number/: Cargo.toml
unique-number/src/: main.rs
vector-difference/: Cargo.toml  README.md
vector-difference/src/: main.rs
