[project]
name = "parsing-xlsx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "types-openpyxl>=3.1.5.20250516",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "D211",  # оставить D203
    "D213",  # оставить D212
]

[tool.pytest.ini_options]
pythonpath = ["tests"]
