[package]
name = "excel-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
calamine = "0.26.0"
serde = "1.0.219"
serde_json = "1.0.140"

[profile.release]
opt-level = "z"  # Оптимизация для уменьшения размера
lto = true       # Link Time Optimization (оптимизация на этапе линковки)
codegen-units = 1  # Объединение единиц кода для улучшения оптимизации
strip = "symbols"
